--- a/NeuropaceInternship/templates/search.html
+++ b/NeuropaceInternship/templates/search.html
@@ -10,7 +10,7 @@
   <br>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <table id="search_table" class="table table-striped table-bordered tablesorter">
+      <table id="search_table" class="table table-striped table-bordered">
         <thead>
             <th>Collaboration ID</th>
             <th>Field</th>
@@ -20,12 +20,12 @@
           {% for collab in collabs %}
             {% for field in collab._fields %}
               <tr>
-                <td><a href="/new/init/{{ collab.id }}">{{ collab.id }}</a></td>
-                <td>{{ labelize(collab._fields[field]) }}</td>
+                <td class="search-cell"><a href="/new/init/{{ collab.id }}">{{ collab.id }}</a></td>
+                <td class="search-cell">{{ labelize(collab._fields[field]) }}</td>
                 {% if is_selection(collab[field]) %}
-                  <td>{{ collab[field].value }}</td>
+                  <td class="search-cell">{{ collab[field].value }}</td>
                 {% else %}
-                  <td>{{ collab[field] }}</td>
+                  <td class="search-cell">{{ collab[field] }}</td>
                 {% endif %}
               </tr>
             {% endfor %}
