Fixed typos with tablesorter class on the collab and search tables

--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -34,7 +34,7 @@
     <br>
     <div class="row">
       <div class="col-md-12">
-        <table id="collab_table" class="table table-striped table-bordered table-sm ">
+        <table id="collab_table" class="table table-striped table-bordered table-sm tablesorter">
           <thead>
             <tr>
               <th>Date Created</th>
