--- a/NeuropaceInternship/templates/search.html
+++ b/NeuropaceInternship/templates/search.html
@@ -10,7 +10,7 @@
   <br>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <table id="search_table" class="table table-striped table-bordered">
+      <table id="search_table" class="table table-striped table-bordered tablesorter">
         <thead>
             <th>Collaboration ID</th>
             <th>Field</th>
